# langchain-multi-agent-demo

./: .env.example  .gitignore  Makefile  Makefile.linux  Makefile.win  README.md  pyproject.toml  requirements.txt
llm/: kustomization.yaml  pvcs.yaml  vllm-completion-config.yaml  vllm-completion.yaml
notebooks/: README.md
src/: README.md  main.py
src/agents/: draft_reply_agent.py  human_review_agent.py  intent_classifier_agent.py  read_mail_agent.py
src/agentstructure/: workflow_graph.py
src/graph/: state.py  workflow_graph.py
src/multi-agent-system/: README.md  llm.txt  main.py
src/multi-agent-system/agents/: draft_reply_agent.py  human_review_agent.py  intent_classifier_agent.py  spam_agent.py
src/multi-agent-system/agentstructure/: state.py  workflow_graph.py
src/multi-agent-system/services/: telegram_service.py
src/services/: mail_service.py  n8n_service.py
src/streamlit_ui/: README.md  app.py
src/utils/: config.py  logger.py
streamlit_ui/: README.md  app.py  boxmail.py  boxmail_2.py  boxmail_using_agent_structure.py
streamlit_ui/db_inbox/: mail_inbox.json
streamlit_ui/draft/: boxmail_2.py  llmspeech.json  nick_shell.txt
tests/: README.md  test_graph.py  test_services.py
