[project]
name = 'agentic-email-automation'
version = '0.1.0'
description = 'Agentic AI Email Automation using LangGraph and LangChain'
authors = [{name='Gaurav Pandey'}, {name="Chandler Nick"}]
dependencies = ['langchain', 'langgraph', 'langchain-openai', 'openai', 'python-dotenv', 'uvicorn', 'fastapi']
